--- a/app/views/_user_util_links.html.erb
+++ b/app/views/_user_util_links.html.erb
@@ -1,4 +1,5 @@
 <ul id="user_utility_links" class="nav navbar-nav navbar-right">
+  <%= render 'shared/whats_new' %>
   <%= render 'shared/locale_picker' if available_translations.size > 1 %>
   <%= render '/toolbar' %>
   <% if user_signed_in? %>
