--- a/app/views/hyrax/dashboard/collections/_show_actions.html.erb
+++ b/app/views/hyrax/dashboard/collections/_show_actions.html.erb
@@ -27,12 +27,12 @@
                 <% end %>
 <% end %>
 
-<%= link_to main_app.collection_exports_path(collection_id: presenter.id),
+<%#= link_to main_app.collection_exports_path(collection_id: presenter.id),
             method: 'post',
             class: 'btn btn-primary export-collection-button',
             title: t("hyrax.collection.actions.export_collection") do %>
-  <%= t("hyrax.collection.actions.export_collection") %>
-<% end %>
+  <%#= t("hyrax.collection.actions.export_collection") %>
+<%# end %>
 
 <% if can? :destroy, presenter.solr_document %>
     <%= link_to t('hyrax.collection.actions.delete.label'),
