--- a/app/views/hyrax/homepage/_featured.html.erb
+++ b/app/views/hyrax/homepage/_featured.html.erb
@@ -1,6 +1,6 @@
 <% presenter = featured.presenter %>
 <li class="featured-item" data-id="<%= presenter.id %>">
-  <div class="center-block main row featured-thumb">
+  <div class="center-block main row featured-thumb featured-work-fix">
     <%= render_thumbnail_tag presenter, { alt: "Featured work thumbnail: #{ presenter.title.first }" } %>
   </div>
 </li>
