--- a/app/views/hyrax/base/_form_progress.html.erb
+++ b/app/views/hyrax/base/_form_progress.html.erb
@@ -8,7 +8,7 @@
         <legend class="legend-save-work"><%= t('.requirements') %></legend>
         <ul class="requirements">
           <li class="incomplete" id="required-metadata"><%= t('.required_descriptions') %></li>
-          <% if Hyrax.config.work_requires_files? %>
+          <% if Hyrax.config.work_requires_files? || params[:controller] == "hyrax/batch_uploads" %>
             <li class="incomplete" id="required-files"><%= t('.required_files') %></li>
           <% end %>
           <% if Flipflop.show_deposit_agreement? && Flipflop.active_deposit_agreement_acceptance? %>
