--- a/app/views/static/login.html.erb
+++ b/app/views/static/login.html.erb
@@ -8,5 +8,5 @@
 <div id="local-login">
   &nbsp;<br />
   <h3>Other Users</h3>
-  <p>If you're not affiliated with UC, but have been given an account for <%= t('hyrax.product_name') %>, you can <strong><%= link_to 'log in using a local account', new_user_session_path %></strong>.  To request an account, <a href="/contact">use the contact page</a>.</p>
+  <p>If you're not affiliated with UC, but have been given an account for <%= t('hyrax.product_name') %>, you can <strong><%= link_to 'log in using a local account', new_user_session_path %></strong>.  To request an account, <%= link_to 'use the contact page', contact_path %>.</p>
 </div>
