--- a/app/views/welcome_page/_student_welcome_text.erb
+++ b/app/views/welcome_page/_student_welcome_text.erb
@@ -2,7 +2,7 @@
 <p>Welcome to <%= t('hyrax.product_name') %>! On this page, you will learn how students can use <%= t('hyrax.product_name') %>.</p>
 
 <h3 id="what-is-Scholar">What is <%= t('hyrax.product_name') %>?</h3>
-<p><%= t('hyrax.product_name') %> is a digital repository that enables the University of Cincinnati community to share research and scholarly work with a worldwide audience and preserve it for the future. It provides free access to material written, produced, and researched by the UC community. Read more about the mission of <%= t('hyrax.product_name') %> on the <a href="/about">About page</a>. Get the latest updates on development of <%= t('hyrax.product_name') %> on our <a href="http://libapps.libraries.uc.edu/scholarblog/">Scholarblog</a>.</p>
+<p><%= t('hyrax.product_name') %> is a digital repository that enables the University of Cincinnati community to share research and scholarly work with a worldwide audience and preserve it for the future. It provides free access to material written, produced, and researched by the UC community. Read more about the mission of <%= t('hyrax.product_name') %> on the <%= link_to 'About page', about_path %></a>. Get the latest updates on development of <%= t('hyrax.product_name') %> on our <a href="http://libapps.libraries.uc.edu/scholarblog/">Scholarblog</a>.</p>
 
 <h3 id="how-can-students-use-Scholar">How can students use <%= t('hyrax.product_name') %>?</h3>
 <p>Although only faculty and staff can submit content to <%= t('hyrax.product_name') %> at this time, students can log in and view material in the repository for research or classroom work. <%= t('hyrax.product_name') %> is constantly growing and includes information like published articles, photographs, manuscripts, datasets, posters and much more.</p>
@@ -15,8 +15,8 @@
 
   <li><p><b>Citing materials in <%= t('hyrax.product_name') %>: </b>Citing material in <%= t('hyrax.product_name') %> is similar to citing resources found in other database and online. See the <a href= "http://guides.libraries.uc.edu/citing">campus guide on citing your sources.</a></p></li>
 
-  <li><p><b>Terms of Use: </b>For more information, see the <%= t('hyrax.product_name') %> <a href="/terms">Terms of Use.</a></p></li>
+  <li><p><b>Terms of Use: </b>For more information, see the <%= t('hyrax.product_name') %> <%= link_to 'Terms of Use.', terms_path %></p></li>
 </ul>
 
 <h4 id="need-further-assistance">Need Further Assistance?</h4>
-<p><a href="/contact">Contact the <%= t('hyrax.product_name') %> Team</a>.</p>
+<p><%= link_to 'Contact the ' + t('hyrax.product_name'), contact_path %> Team</a>.</p>
