Update to use Hyrax 2.4.1

--- a/app/views/hyrax/dashboard/works/_default_group.html.erb
+++ b/app/views/hyrax/dashboard/works/_default_group.html.erb
@@ -1,4 +1,4 @@
-<table class="table table-striped works-list">
+<table class="table table-striped works-list datatable">
   <caption class="sr-only"><%= t("hyrax.dashboard.my.sr.listing") %> <%= application_name %></caption>
   <thead>
     <tr>
