--- a/app/views/hyrax/base/_attribute_rows.html.erb
+++ b/app/views/hyrax/base/_attribute_rows.html.erb
@@ -2,12 +2,12 @@
 <%= presenter.submitter_profile.html_safe%>
 <%= presenter.attribute_to_html(:contributor, html_dl: true) %>
 <%= presenter.attribute_to_html(:college, render_as: :faceted, html_dl: true) %>
-<%= presenter.attribute_to_html(:department, render_as: :faceted, html_dl: true) %>
+<%= presenter.attribute_to_html(:department, render_as: :faceted, html_dl: true, work_type: dom_class(presenter)) %>
 <%= presenter.attribute_to_html(:subject, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:publisher, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:language, render_as: :faceted, html_dl: true) %>
 <%= presenter.attribute_to_html(:identifier, render_as: :linked, search_field: 'identifier_tesim', html_dl: true) %>
-<%= presenter.attribute_to_html(:date_created, render_as: :faceted, label: "Date Created", html_dl: true) %>
+<%= presenter.attribute_to_html(:date_created, render_as: :faceted, label: "Date Created", html_dl: true, work_type: dom_class(presenter)) %>
 <%= presenter.attribute_to_html(:related_url, render_as: :external_link, html_dl: true) %>
 <%= presenter.attribute_to_html(:alternate_title, html_dl: true) %>
 <%= presenter.attribute_to_html(:journal_title, html_dl: true) %>
