--- a/app/views/collection_exports/index.html.erb
+++ b/app/views/collection_exports/index.html.erb
@@ -1,6 +1,6 @@
 <% 'app/helpers/collection_export_helper.rb' %>
-<h1><%= t("collection_export.title") %></h1>
 
+<h1><%= t("collection_export.title") %></h1>
 <table class="table">
   <thead>
     <tr>
@@ -15,15 +15,15 @@
   <tbody>
     <% @collection_exports.each do |collection_export| %>
 
-      <tr scope="row">
-        <td><%= collection_export.collection_id %></td>
-        <td><%= collection_title(collection_export.collection_id) %></td>
-        <td><%= collection_export.created_at.localtime.strftime("%m/%d/%Y at %l:%M %p") %></td>
-        <td><%= link_to t("collection_export.action.download"), collection_export_download_path(collection_export), target: '_self' ,turbolinks: "false" %></td>
-        <% if can? :destroy, collection_export %>
-          <td><%= link_to t("collection_export.action.destroy"), collection_export, method: :delete, data: { confirm: t("collection_export.action.confirm_destroy") } %></td>
-        <% end %>
-      </tr>
+    <tr scope="row">
+      <td><%= collection_export.collection_id %></td>
+      <td><%= collection_title(collection_export.collection_id) %></td>
+      <td><%= collection_export.created_at.in_time_zone(@tz).strftime("%m/%d/%Y at %l:%M %p") %></td>
+      <td><%= link_to t("collection_export.action.download"), collection_export_download_path(collection_export), target: '_self' ,turbolinks: "false" %></td>
+      <% if can? :destroy, collection_export %>
+      <td><%= link_to t("collection_export.action.destroy"), collection_export, method: :delete, data: { confirm: t("collection_export.action.confirm_destroy") } %></td>
+      <% end %>
+    </tr>
     <% end %>
   </tbody>
 </table>
